# timetracker

./: .flake8  .gitignore  .pylintrc  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  search.html  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation.yaml  feature_request.yaml  support_request.yaml
.github/workflows/: docs.yaml.bac  pylint.yml  pytest.yml  python-app.yml
.timetracker/: .gitignore  config
.trkr/: config
assets/: colors.css  index.css
config_global/: index.html
config_local/: index.html
contributing/: index.html
doc/: LINKS.md  work_in_progress.pptx
doc/docs/: mkdocs.yml
doc/docs/docs_theme/: index.html
doc/docs/docs_theme/assets/: highlight.css
doc/docs/source/: tips-and-tricks.md  usage_advanced.md
doc/images/: README.md
doc/mkdocs/: mkdocs.yml  sitemap.xml
doc/mkdocs/docs_theme/: index.html
doc/mkdocs/docs_theme/assets/: theme.css
doc/mkdocs/source/: BingSiteAuth.xml  README.md  config_local.md  index.md  installation.md  invoicing.md  pandas.md  reference-command-line.md  usage_advanced.md  usage_basic.md
doc/sphinx/: conf.py  index.md  index.rst  makefile
docs/: README.md  conf.py  config_global.md  contributing.md  index.md  index.rst  installation.md  makefile  overview.md  quickstart.md  usage.md  usage_basic.md  usage_next.md
docs/_static/: at.md
docs_theme/: main.html  search.html
installation/: index.html
invoicing/: index.html
overview/: index.html
pandas/: index.html
reference-command-line/: index.html
search/: search_index.json
tests/: README.md  __init__.py  mkprojs.py  run_dateparser.py  run_dateutil.py  run_expandvars.py  run_pstats.py  tag.sh  test_cfg_global.py  test_cfg_init_force.py  test_cfg_needs_reinit.py  test_cfg_reinit1.py  test_cfg_reinit2.py  test_cfgcsv.py  test_cli.py  test_cli_dircsv_default.py  test_cmd_init.py  test_cmd_projects_david.py  test_cmdcsv.py  test_csvfile.py  test_csvloc.py  test_csvrun.py  test_dateparser.py  test_datetutil.py  test_doc_value.py  test_docx.py  test_epoch_input.py  test_exists0_cfg.py  test_finddirtrk.py  test_finder.py  test_get_absrelcsv.py  test_get_dirhome_globalcfg.py  test_get_shortestname.py  test_hms.py  test_negtdelta.py  test_report.py  test_roundedtime.py  test_sm_hhss_am.py  test_startat.py  test_stmch.py  (+8 more)
tests/pkgtttest/: __init__.py  cmpstr.py  consts.py  dts.py  epochcli.py  expcsvs.py  fncs.py  mkprojs.py  runbase.py  runfncs.py  runprojs.py  startdts.py  testbase.py  timestrs.py  upstream.py  userprojs.py
timetracker/: __init__.py  cfg.py  cli.py  consts.py  csvfile.py  csvget.py  csvold.py  csvrun.py  csvutils.py  docx.py  epoch.py  filemgr.py  fncs.py  hms.py  main.py  msgs.py  ntcsv.py  proc.py  projects.py  recorder.py  scripts.py  starttime.py  timecalc.py  timestr.py  timetext.py  timetracker.py  trk.py  trkr.py  utils.py
timetracker/cfg/: cfg.py  cfg_global.py  cfg_local.py  doc_local.py  docutils.py  finder.py  starttime.py  tomutils.py  utils.py
timetracker/cli/: __init__.py  cli.py  main.py
timetracker/cmd/: activity.py  base.py  cancel.py  common.py  csv.py  csvloc.py  csvupdate.py  fncs.py  hours.py  init.py  invoice.py  invoke.py  none.py  paid.py  projects.py  report.py  running.py  start.py  stop.py  tag.py  time.py
timetracker/epoch/: cli.py  epoch.py  stmach.py  text.py
tips-and-tricks/: index.html
usage_advanced/: index.html
usage_basic/: index.html
