[project]
name = "timetracker-csv"
version = "0.5a1"
license = "AGPL-3.0-or-later"
# Needed for assignment expressions & the walrus operator
requires-python = '>=3.8'
dynamic = [
    "dependencies",
    "scripts",
    "classifiers",
    "authors",
    "readme",
    "description",
]
keywords = [
    "Linux",
    "cli",
    "productivity",
    "csv",
    "history",
    "collaboration",
    "pandas",
    "time-tracker",
    "timetracker",
    "csv-reading",
    "csv-export",
    "timetracking",
]

[project.urls]
Homepage = "https://github.com/dvklopfenstein/timetracker"
Issues = "https://github.com/dvklopfenstein/timetracker/issues"

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_cmd_projects_judith.py"

[tool.coverage.run]
source = [
    "timetracker",
    ]
omit = [
    "tests/test_cmd_projects_judith.py",
    ]

[build-system]
requires = ["setuptools >= 46.3.0"]
build-backend = "setuptools.build_meta"
