[build-system]
# setuptools min version needed for setuptools.build_meta
requires = ["setuptools >= 46.3.0"]
build-backend = "setuptools.build_meta"


[project]
name = "timetracker-csv"
description = "Pandas-friendly time tracking from the CLI"
version = "0.5a9"
license = "AGPL-3.0-or-later"
authors = [
  {name = 'DV Klopfenstein, PhD', email = 'dvklopfenstein@protonmail.com'},
]
readme = {file="README.md", content-type="text/markdown"}

# Needed for assignment expressions & the walrus operator
requires-python = '>=3.8'

keywords = [
  "Linux",
  "cli",
  "productivity",
  "csv",
  "history",
  "collaboration",
  "pandas",
  "time-tracker",
  "timetracker",
  "csv-reading",
  "csv-export",
  "timetracking",
]

dependencies = [
  'tomlkit',
  'pytimeparse2',
  'dateparser',
  'python-docx',
]

# https://pypi.org/classifiers/
classifiers=[
  'Programming Language :: Python',
  'Environment :: Console',
  'Intended Audience :: Science/Research',
  'Development Status :: 1 - Planning',
  'Programming Language :: Python :: 3',
  'Topic :: Office/Business :: Financial :: Spreadsheet',
]


[project.scripts]
trk     = "timetracker.cli:main"
timestr = "timetracker.epoch.cli:main"


[project.urls]
Homepage = "https://github.com/dvklopfenstein/timetracker"
Issues = "https://github.com/dvklopfenstein/timetracker/issues"


[tool.pytest.ini_options]
addopts = "--ignore=tests/test_cmd_projects_judith.py"


[tool.coverage.run]
source = [
    "timetracker",
    ]
omit = [
    "tests/test_cmd_projects_judith.py",
    ]

[tool.setuptools]
packages = [
  'timetracker',
  'timetracker.cmd',
  'timetracker.cfg',
  'timetracker.epoch',
]
